--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build-server": "babel -d ./build ./src"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,13 @@
     "firebase": "^9.17.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@babel/core": "^7.10.5",
+    "@babel/node": "^7.4.5",
+    "@babel/plugin-transform-runtime": "^7.5.0",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/runtime": "^7.5.4",
+    "@babel/cli": "^7.4.4",
+    "bcryptjs": "^2.4.3"
   }
 }
